# catala-examples

./: .gitignore  .welcome  META  Makefile  Makefile.common.mk  README.md  catala-examples.opam  clerk.toml  dune  dune-project
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
NSW_community_gaming/: nsw_art_union.catala_en  nsw_charity_housie.catala_en  nsw_club_bingo.catala_en  nsw_draw_lottery.catala_en  nsw_no_draw_lottery.catala_en  nsw_progressive_lottery.catala_en  nsw_social_housie.catala_en
NSW_community_gaming/tests/: test_nsw_art_union.catala_en  test_nsw_charity_housie.catala_en  test_nsw_club_bingo.catala_en  test_nsw_draw_lottery.catala_en  test_nsw_no_draw_lottery.catala_en  test_nsw_progressive_lottery.catala_en  test_nsw_social_housie.catala_en
aide_fibre/: Aide_travaux_raccordement_fibre_optique.catala_fr  Eligibilite_commune.catala_fr  Eligibilite_commune.ml  Eligibilite_commune.mli  dune
aide_fibre/tests/: test_aide_fibre.catala_fr
aides_logement/: Aides_logement.catala_fr  aides_logement.catala_fr  archives.catala_fr  arrete_2019-09-27.catala_fr  autres_sources.catala_fr  code_construction_legislatif.catala_fr  code_construction_reglementaire.catala_fr  code_sécurité_sociale.catala_fr  dune  prologue.catala_fr
aides_logement/archive/: arrete_2019-09-27.catala_fr
aides_logement/tests/: tests_calcul_al_accession_propriete.catala_fr  tests_calcul_al_locatif.catala_fr  tests_calcul_al_logement_foyer.catala_fr  tests_calcul_apl_accession_propriete.catala_fr  tests_calcul_apl_locatif.catala_fr  tests_calcul_apl_logement_foyer.catala_fr  tests_calculette_globale.catala_fr  tests_couverture_temporelle.catala_fr  tests_eligibilite_apl.catala_fr  tests_invariants.catala_fr
allocations_familiales/: Allocations_familiales.catala_fr  autres_codes.catala_fr  decrets_divers.catala_fr  dune  epilogue.catala_fr  prologue.catala_fr  securite_sociale_D.catala_fr  securite_sociale_L.catala_fr  securite_sociale_R.catala_fr
allocations_familiales/tests/: test_invariants.catala_fr  tests_allocations_familiales.catala_fr  tests_ouverture_droits.catala_fr
asp/aide_fibre/: Aide_travaux_raccordement_fibre_optique.catala_fr  Eligibilite_commune.catala_fr
asp/aide_fibre/ocaml/: Eligibilite_commune.ml  Eligibilite_commune.mli
asp/aide_fibre/tests/: test_aide_fibre.catala_fr
asp/bcae7/: BCAE7.catala_fr  arrêts_cjue.catala_fr  fiche_technique_BCAE7_2025.catala_fr  plan_national_stratégique.catala_fr  prologue.catala_fr
asp/bcae7/tests/: tests_bcae7.catala_fr  tests_bcae_gui.catala_fr
asp/fonpeps/: fonpeps.catala_fr
asp/fonpeps/tests/: test_fonseps.catala_fr
base_mensuelle_allocations_familiales/: Bmaf.catala_fr
bench/ocaml/: api.ml  api.mli  bench.ml  dune
droit_successions/: droit_successions.catala_fr
droit_successions/tests/: tests_droit_succession.catala_fr
exemple_explication/: apl_locatif.catala_fr
impot_revenu/: .gitignore  LICENSE  archives_cgi.catala_fr  cgi_revenus.catala_fr  dune  impot_revenu.catala_fr  lfr_2022.catala_fr  loi_2022-1158.catala_fr  modèle_convention_fiscale_ocde.catala_fr  oracles.catala_fr  oracles.ml  oracles.mli  oracles.template.ml  oracles.template.mli  prologue.catala_fr  vérifications.catala_fr
impot_revenu/java/: oracles.java
impot_revenu/ocaml/: dune  oracles.ml  oracles.mli
impot_revenu/tests/: benefices_industriels_commerciaux.catala_fr  benefices_non_commerciaux.catala_fr  deficits_anterieurs.catala_fr  interface.catala_fr  nombre_de_parts.catala_fr  prorata.catala_fr  traitements_salaires.catala_fr
polish_taxes/: dune
polish_taxes/podatek_od_czynnosci_cywilnoprawnych/: rozdzial_3.catala_pl
polish_taxes/tests/: test_a7_u1_p1.catala_pl  test_a7_u1_p2.catala_pl  test_a7_u1_p3.catala_pl  test_a7_u1_p4.catala_pl  test_a7_u1_p7.catala_pl  test_a7_u1_p9.catala_pl
prestations_familiales/: Prestations_familiales.catala_fr  prologue.catala_fr  sécurité_sociale_L.catala_fr  sécurité_sociale_R.catala_fr
prestations_familiales/tests/: tests_ouverture_droits.catala_fr
prologue_france/: France.catala_fr
smic/: Smic.catala_fr  smic.catala_fr
subventions_ademe/: .gitignore  contrat_chaleur_renouvelable.catala_fr  réemploi_réutilisation_réparation.catala_fr
subventions_ademe/sources/: CEF+2025+-+Aides+aux+relais_vdéf+hors+liens+CEP+(1) (1).docx  CEF+EFC_2025+v2.docx  CEF_RRR_hors_emballages_invest+2025-VF.docx
tutorial_en/: dune  test_tutorial.catala_en  tutorial_en.catala_en
tutorial_en/tests/: test_tutorial.catala_en
tutoriel_fr/: dune  tutoriel_fr.catala_fr
tutoriel_fr/tests/: test_tutoriel.catala_fr
us_tax_code/: dune  section_121.catala_en  section_132.catala_en  section_152.catala_en  us_tax_code.catala_en
us_tax_code/tests/: test_section_121.catala_en  test_section_132.catala_en
