opam-version: "2.0"
version: "0.9.0"
synopsis: "Collection of Catala programs"
description:
  "This package gathers implementations of algorithmic portions of various legislative texts, as well as tutorials and examples. Installed artefacts include OCaml and Python libraries resulting from the compilation of the examples written in Catala"
maintainer: ["contact@catala-lang.org"]
authors: ["Denis Merigoux"]
license: "Apache-2.0"
homepage: "https://github.com/CatalaLang/catala"
bug-reports: "https://github.com/CatalaLang/catala/issues"
depends: [
  "dune" {>= "2.8"}
  "ocaml" {>= "4.11.0"}
  "catala" {= version}
  "odoc" {with-doc}
]
build: [
  [
    "dune" "build" "-p" name "-j" jobs "@install"
      "@runtest" {with-test}
      "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/CatalaLang/catala.git"
