; Override dune default warnings with sane settings
(env
 ; don't stop building because of warnings
 (dev
  (env-vars (CATALA_INCLUDE prologue_france:smic:base_mensuelle_allocations_familiales:prestations_familiales:allocations_familiales:aides_logement:droit_successions))
  (flags
   (:standard -warn-error -a)))
 ; for CI runs: must fail on warnings
 (check
  (env-vars (CATALA_INCLUDE prologue_france:smic:base_mensuelle_allocations_familiales:prestations_familiales:allocations_familiales:aides_logement:droit_successions))
  (flags
   (:standard
    -w
    +a-4-29-40-41-42-44-45-48-58-59-60-63-64-65-66-67-68-69-70
    -warn-error
    +a)))
 ; let us see the warnings even in release mode, but non-fatal
 (release
  (env-vars (CATALA_INCLUDE prologue_france:smic:base_mensuelle_allocations_familiales:prestations_familiales:allocations_familiales:aides_logement:droit_successions))
  (flags
   (:standard
    -w
    +a-4-29-40-41-42-44-45-48-58-59-60-63-64-65-66-67-68-69-70
    -warn-error
    -a))))

; reproduces 'make testsuite'
(rule
 (deps (source_tree *))
 (alias runtest)
 (action
  (progn
    (run clerk test -C %{project_root}/../..)
    (run clerk test -C %{project_root}/../.. --test-flags=--lcalc,-O,--avoid-exceptions))))

(rule
 (deps (source_tree *))
 (alias clerk-build)
 (action
  (progn
    (run clerk build --build-dir .
           Allocations_familiales@module
           Aides_logement@module
           _build/allocations_familiales/Allocations_familiales.py
           _build/aides_logement/Aides_logement.py)
    (run catala json_schema allocations_familiales/allocations_familiales.catala_fr -t --scope InterfaceAllocationsFamiliales)
    (run catala json_schema aides_logement/aides_logement.catala_fr -t --scope CalculetteAidesAuLogementGardeAlternée)
    (run catala api_web -t allocations_familiales/allocations_familiales.catala_fr)
    (run catala api_web -t aides_logement/aides_logement.catala_fr)
    (run catala
)))

