(rule
 (targets aides_logement.ml aides_logement_api_web.ml)
 (deps
  (source_tree ../base_mensuelle_allocations_familiales)
  (source_tree ../prestations_familiales))
 (action
  (run catala api_web -C %{workspace_root} -t
    %{dep:aides_logement.catala_fr})))

(rule
 (targets aides_logement_schema.json)
 (deps
  (source_tree ../base_mensuelle_allocations_familiales)
  (source_tree ../prestations_familiales))
 (action
  (run catala json_schema -C %{workspace_root} -t
    --scope "CalculetteAidesAuLogementGardeAltern\195\169e"
    %{dep:aides_logement.catala_fr})))

(rule
 (target aides_logement.py)
 (deps
  (source_tree ../base_mensuelle_allocations_familiales)
  (source_tree ../prestations_familiales))
 (action
   (run catala Python -C %{workspace_root} -O
    %{dep:aides_logement.catala_fr})))

(rule
 (target aides_logement.html)
 (deps
  (source_tree ../base_mensuelle_allocations_familiales)
  (source_tree ../prestations_familiales))
 (action
   (run catala html -C %{workspace_root}
    %{dep:aides_logement.catala_fr})))

(rule
 (target aides_logement.tex)
 (deps
  (source_tree ../base_mensuelle_allocations_familiales)
  (source_tree ../prestations_familiales))
 (action
   (run catala latex -C %{workspace_root}
    %{dep:aides_logement.catala_fr})))

(library
 (name aides_logement)
 (public_name catala-examples.aides_logement)
 (wrapped false)
 (modules aides_logement aides_logement_api_web)
 (preprocess (per_module ((pps js_of_ocaml-ppx) aides_logement_api_web)))
 (libraries catala.runtime_ocaml catala.runtime_jsoo))

(install
 (files
  (aides_logement_schema.json as aides_logement/aides_logement_schema.json)
  (aides_logement.py as aides_logement/aides_logement.py))
 (section lib))

(install
 (files
  (aides_logement.html as aides_logement/aides_logement.html)
  (aides_logement.tex as aides_logement/aides_logement.tex))
 (section doc))
