(rule
 (alias deps)
 (deps
  (glob_files *.catala_fr)
  (source_tree ../prologue_france)
  (source_tree ../smic)
  (source_tree ../base_mensuelle_allocations_familiales)
  (source_tree ../prestations_familiales))
 (action (progn)))

(rule
 (targets allocations_familiales.ml allocations_familiales_api_web.ml)
 (deps (alias deps))
 (action
   (run catala api_web -C %{workspace_root} -t
    %{dep:allocations_familiales.catala_fr})))

(rule
 (targets allocations_familiales_schema.json)
 (deps (alias deps))
 (action
  (run catala json_schema -C %{workspace_root} -t
    --scope InterfaceAllocationsFamiliales
    %{dep:allocations_familiales.catala_fr})))

(rule
 (target allocations_familiales.py)
 (deps (alias deps))
 (action
   (run catala Python -C %{workspace_root} -O
     %{dep:allocations_familiales.catala_fr})))

(rule
 (target allocations_familiales.tex)
 (deps (alias deps))
 (action
   (run catala latex -C %{workspace_root}
    %{dep:allocations_familiales.catala_fr})))

(rule
 (target allocations_familiales.html)
 (deps (alias deps))
 (action
   (run catala html -C %{workspace_root}
    %{dep:allocations_familiales.catala_fr})))

(copy_files tests/tests_allocations_familiales.catala_fr)

(rule
 (targets tests_allocations_familiales.ml)
 (deps (alias deps))
 (action
  (run catala OCaml -t tests_allocations_familiales.catala_fr)))


(library
 (name allocations_familiales)
 (public_name catala-examples.allocations_familiales)
 (wrapped false)
 (modules allocations_familiales
          allocations_familiales_api_web
          tests_allocations_familiales)
 (preprocess (per_module ((pps js_of_ocaml-ppx) allocations_familiales_api_web)))
 (libraries catala.runtime_ocaml catala.runtime_jsoo))

(install
 (files
  (allocations_familiales_schema.json
   as allocations_familiales/allocations_familiales_schema.json)
  (allocations_familiales.py
   as allocations_familiales/allocations_familiales.py))
 (section lib))

(install
 (files
  (allocations_familiales.html
   as allocations_familiales/allocations_familiales.html)
  (allocations_familiales.tex
   as allocations_familiales/allocations_familiales.tex))
 (section doc))
