(rule
 (target polish_taxes.html)
 (deps (source_tree .))
 (action
   (run catala html -C %{workspace_root}
    %{dep:polish_taxes.catala_pl})))

(rule
 (target polish_taxes.tex)
 (deps (source_tree .))
 (action
   (run catala latex -C %{workspace_root}
    %{dep:polish_taxes.catala_pl})))

(install
 (files
  (polish_taxes.html as polish_taxes/polish_taxes.html)
  (polish_taxes.tex as polish_taxes/polish_taxes.tex))
 (section doc))
