(rule
 (target tutorial_en.html)
 (deps (source_tree .))
 (action
   (run catala html -C %{workspace_root}
    %{dep:tutorial_en.catala_en})))

(rule
 (target tutorial_en.tex)
 (deps (source_tree .))
 (action
   (run catala latex -C %{workspace_root}
    %{dep:tutorial_en.catala_en})))

(install
 (files
  (tutorial_en.html as tutorial_en/tutorial_en.html)
  (tutorial_en.tex as tutorial_en/tutorial_en.tex))
 (section doc))
