(rule
 (target us_tax_code.html)
 (deps (source_tree .))
 (action
   (run catala html -C %{workspace_root}
    %{dep:us_tax_code.catala_en})))

(rule
 (target us_tax_code.tex)
 (deps (source_tree .))
 (action
   (run catala latex -C %{workspace_root}
    %{dep:us_tax_code.catala_en})))

(install
 (files
  (us_tax_code.html as us_tax_code/us_tax_code.html)
  (us_tax_code.tex as us_tax_code/us_tax_code.tex))
 (section doc))
